all navbars are now the same, have the right element selected and update with the currently active user + logout button

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -26,7 +26,7 @@
       <nav>
         <ul>
           <li>
-            <a href="" data-active>
+            <a href="/manager/" data-active>
               <span class="material-symbols-outlined">leaderboard</span>
               Dashboard
             </a>
@@ -40,14 +40,14 @@
             <hr />
           </li>
           <li>
-            <a href="">
+            <a href="/knowledge/">
               <span class="material-symbols-outlined">menu_book</span>
               Knowledge
             </a>
             <hr />
           </li>
           <li>
-            <a href="profile">
+            <a href="/profile/">
               <span class="material-symbols-outlined">manage_accounts</span>
               My Profile
             </a>
@@ -85,8 +85,8 @@
       <button class="mobile-nav-toggle material-symbols-outlined">menu</button>
       <div class="account-info flex-row">
         <div class="flex-col">
-          <h6 id="user-name">King Firat</h6>
-          <p id="user-rank" class="dimmed">Manager</p>
+          <h6 id="user-name">UserName</h6>
+          <p id="user-rank" class="dimmed">UserRank</p>
         </div>
         <img
           src="https://placekitten.com/50/50"
@@ -94,7 +94,6 @@
           width="50"
           height="50"
         />
-        <p class="material-symbols-outlined dimmed">expand_more</p>
         <p id="logout" class="material-symbols-outlined dimmed">logout</p>
       </div>
     </header>
