--- a/web/knowledge/index.html
+++ b/web/knowledge/index.html
@@ -10,14 +10,56 @@
     <link rel="icon" type="image/svg" href="/tools.svg" />
     <link rel="stylesheet" href="/base.css" />
     <link rel="stylesheet" href="style.css" />
-    <!-- <link rel="stylesheet" href="style.css" /> -->
 
-    <!-- <script defer type="module" src="script.js"></script> -->
+    <!-- Because it doesn't have a script -->
+    <script type="module">
+      import { navbar } from "/nav.js";
+      navbar();
+    </script>
 
-    <title>Post</title>
+    <title>Knowledge Search</title>
   </head>
 
   <body>
+    <dialog class="nav-mobile">
+      <div class="flex-row kanban-title">
+        <h2>Menu</h2>
+        <button class="btn-icon material-symbols-outlined dialog-close">
+          close
+        </button>
+      </div>
+      <nav>
+        <ul>
+          <li>
+            <a href="/manager/">
+              <span class="material-symbols-outlined">leaderboard</span>
+              Dashboard
+            </a>
+            <hr />
+          </li>
+          <li>
+            <a href="/manager/">
+              <span class="material-symbols-outlined">surfing</span>
+              Managers
+            </a>
+            <hr />
+          </li>
+          <li>
+            <a href="/knowledge/" data-active>
+              <span class="material-symbols-outlined">menu_book</span>
+              Knowledge
+            </a>
+            <hr />
+          </li>
+          <li>
+            <a href="/profile/">
+              <span class="material-symbols-outlined">manage_accounts</span>
+              My Profile
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </dialog>
     <aside class="side-menu">
       <img src="/tools.svg" alt="Make-it-all" width="100%" />
       <nav>
@@ -43,51 +85,13 @@
         </ul>
       </nav>
     </aside>
-    <dialog class="nav-mobile">
-      <div class="flex-row kanban-title">
-        <h2>Menu</h2>
-        <button class="btn-icon material-symbols-outlined dialog-close">
-          close
-        </button>
-      </div>
-      <nav>
-        <ul>
-          <li>
-            <a href="/dashboard/">
-              <span class="material-symbols-outlined">leaderboard</span>
-              Dashboard
-            </a>
-          </li>
-          <hr />
-          <li>
-            <a href="/knowledge/" data-active>
-              <span class="material-symbols-outlined">menu_book</span>
-              Knowledge
-            </a>
-          </li>
-          <hr />
-          <li class="hidden">
-            <a href="/manager/"
-              ><span class="material-symbols-outlined">surfing</span></a
-            >
-          </li>
-          <hr />
-          <li>
-            <a href="/profile/">
-              <span class="material-symbols-outlined">manage_accounts</span>
-              My Profile
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </dialog>
     <header class="header">
       <h1>Knowledge Management</h1>
       <button class="mobile-nav-toggle material-symbols-outlined">menu</button>
       <div class="account-info flex-row">
         <div class="flex-col">
-          <h6 id="user-name">King Firat</h6>
-          <p id="user-rank" class="dimmed">Manager</p>
+          <h6 id="user-name">UserName</h6>
+          <p id="user-rank" class="dimmed">UserRank</p>
         </div>
         <img
           src="https://placekitten.com/50/50"
@@ -95,8 +99,7 @@
           width="50"
           height="50"
         />
-        <p class="material-symbols-outlined dimmed">expand_more</p>
-        <p class="material-symbols-outlined dimmed">logout</p>
+        <p id="logout" class="material-symbols-outlined dimmed">logout</p>
       </div>
     </header>
     <main>
@@ -118,7 +121,11 @@
           <p>Search</p>
           <span class="material-symbols-outlined">search</span>
         </button>
-        <button type="submit" class="btn-action">
+        <button
+          type="button"
+          class="btn-action"
+          onclick="window.location.href='post/new/'"
+        >
           <p>Create Post</p>
           <span class="material-symbols-outlined">add</span>
         </button>
