--- a/web/profile/index.html
+++ b/web/profile/index.html
@@ -6,13 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="light dark" />
     <meta name="theme-color" content="#1e1e1e" />
-    <link rel="stylesheet" href="../base.css" />
-    <link rel="stylesheet" href="./style.css" />
 
-    <title>Profile page</title>
+    <link rel="stylesheet" href="/base.css" />
+    <script type="module" src="script.js"></script>
+
+    <title>Profile</title>
   </head>
 
   <body>
+    <dialog class="nav-mobile">
+      <div class="flex-row kanban-title">
+        <h2>Menu</h2>
+        <button class="btn-icon material-symbols-outlined dialog-close">
+          close
+        </button>
+      </div>
+      <nav>
+        <ul>
+          <li>
+            <a href="/manager/">
+              <span class="material-symbols-outlined">leaderboard</span>
+              Dashboard
+            </a>
+            <hr />
+          </li>
+          <li>
+            <a href="/manager/">
+              <span class="material-symbols-outlined">surfing</span>
+              Managers
+            </a>
+            <hr />
+          </li>
+          <li>
+            <a href="/knowledge/">
+              <span class="material-symbols-outlined">menu_book</span>
+              Knowledge
+            </a>
+            <hr />
+          </li>
+          <li>
+            <a href="/profile/" data-active>
+              <span class="material-symbols-outlined">manage_accounts</span>
+              My Profile
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </dialog>
     <aside class="side-menu">
       <img src="/tools.svg" alt="Make-it-all" width="100%" />
       <nav>
@@ -22,96 +62,42 @@
               >leaderboard</a
             >
           </li>
-          <li >
+          <li>
             <a href="/manager/" class="material-symbols-outlined">surfing</a>
           </li>
-          <li><a href="#" class="material-symbols-outlined">menu_book</a></li>
-          <li  data-active>
+          <li>
+            <a href="/knowledge/" class="material-symbols-outlined"
+              >menu_book</a
+            >
+          </li>
+          <li data-active>
             <a href="/profile/" class="material-symbols-outlined"
               >manage_accounts</a
             >
           </li>
-          <!-- <li><a href="#" class="material-symbols-outlined">mail</a></li> -->
         </ul>
       </nav>
     </aside>
     <header class="header">
-      <h1>My Profile</h1>
+      <h1>ProfileName</h1>
       <button class="mobile-nav-toggle material-symbols-outlined">menu</button>
       <div class="account-info flex-row">
         <div class="flex-col">
-          <h6>King Firat</h6>
-          <p class="dimmed">Manager</p>
+          <h6 id="user-name">UserName</h6>
+          <p id="user-rank" class="dimmed">UserRank</p>
         </div>
-        <img src="https://placekitten.com/50/50" alt="" />
-        <p class="material-symbols-outlined dimmed">expand_more</p>
-        <p class="material-symbols-outlined dimmed">logout</p>
+        <img
+          src="https://placekitten.com/50/50"
+          alt="User Profile Picture"
+          width="50"
+          height="50"
+        />
+        <p id="logout" class="material-symbols-outlined dimmed">logout</p>
       </div>
     </header>
     <main>
-      <section class="card">
-        <div class="card-title-wrapper">
-          <h2 class="title-card">King Firat</h2>
-          <h2 class="title-card">Account</h2>
-        </div>
-        <div class="card-image-wrapper">
-          <hr class="solid">
-        <!--This part below will eventually only need to show if the user is actually a manager-->
-          <h1 class="heirarchy-card">Manager</h1>
-          <img class="card-profile-picture" src="https://placekitten.com/50/50" alt="" />
-        </div>
-        <div class="card-button-wrapper">
-          <button class="card-upload-button" data-action="upload-photo">
-            <p>Upload photo</p>
-          </button>
-        </div>
-        <div class="card-customisation-wrapper">
-          <div class="wrapper-appearance">
-            <hr class="solid">
-            <h1 class="h1">Appearance</h1>
-            <label for="theme" class="label-subtext">Customize how Make-It-All looks on your device</label>
-            <select name="theme" class="theme">
-              <option value="light">Light</option>
-              <option value="dark">Dark</option>
-            </select>
-          </div>
-          <div class="wrapper-password">
-            <hr class="solid">
-            <h1 class="h1">Password</h1>
-            <label for="change-password-btn" class="label-subtext">Change your password to a more memorable one</label>
-            <button class="change-password-btn" data-action="change-password">
-              <p>Change Password</p>
-            </button>
-          </div>
-          <div class="wrapper-email">
-            <hr class="solid">
-            <h1 class="h1">My Email</h1>
-            <label for="email-box" class="label-subtext">This is your assigned company email</label>
-            <label class="email-box">f.batmaz@lboro.ac.uk</label>
-            <img class="email-lock-img" src="./lock.png" alt="" />
-          </div>
-          <div class="wrapper-invite">
-            <hr class="solid">
-            <h1 class="h1">Invite Others</h1>
-            <label for="invite-btn" class="label-subtext">Invite your co-workers who have not yet signed up</label>
-            <button class="invite-btn" data-action="invite-employee">
-              <p>Invite</p>
-            </button>
-            <hr class="solid">
-          </div>
-          <div class ="wrapper-logout">
-            <button class="logout-btn">
-              <p>Logout</p>
-            </button>
-          </div>
-
-
-
-        </div>
-
-
-      </div>
-      </section>
+      <h2>NEEDS DOING</h2>
+      <a href="edit/">GO TO MY PROFILE EDIT PAGE</a>
     </main>
   </body>
 </html>
