--- a/web/project/index.html
+++ b/web/project/index.html
@@ -27,7 +27,7 @@
       <nav>
         <ul>
           <li>
-            <a href="" data-active>
+            <a href="/manager/">
               <span class="material-symbols-outlined">leaderboard</span>
               Dashboard
             </a>
@@ -41,14 +41,14 @@
             <hr />
           </li>
           <li>
-            <a href="">
+            <a href="/knowledge/">
               <span class="material-symbols-outlined">menu_book</span>
               Knowledge
             </a>
             <hr />
           </li>
           <li>
-            <a href="profile">
+            <a href="/profile/">
               <span class="material-symbols-outlined">manage_accounts</span>
               My Profile
             </a>
@@ -56,12 +56,11 @@
         </ul>
       </nav>
     </dialog>
-
     <aside class="side-menu">
       <img src="/tools.svg" alt="Make-it-all" width="100%" />
       <nav>
         <ul>
-          <li data-active>
+          <li>
             <a href="/dashboard/" class="material-symbols-outlined"
               >leaderboard</a
             >
@@ -82,17 +81,20 @@
         </ul>
       </nav>
     </aside>
-
     <header class="header">
-      <h1 id="project-name">Project X</h1>
+      <h1 id="project-name">ProjectName</h1>
       <button class="mobile-nav-toggle material-symbols-outlined">menu</button>
       <div class="account-info flex-row">
         <div class="flex-col">
-          <h6 id="user-name">King Firat</h6>
-          <p id="user-rank" class="dimmed">Manager</p>
+          <h6 id="user-name">UserName</h6>
+          <p id="user-rank" class="dimmed">UserRank</p>
         </div>
-        <img src="https://placekitten.com/50/50" alt="User Profile Picture" />
-        <p class="material-symbols-outlined dimmed">expand_more</p>
+        <img
+          src="https://placekitten.com/50/50"
+          alt="User Profile Picture"
+          width="50"
+          height="50"
+        />
         <p id="logout" class="material-symbols-outlined dimmed">logout</p>
       </div>
     </header>
