knowledge search less negative space

--- a/web/knowledge/index.html
+++ b/web/knowledge/index.html
@@ -110,10 +110,10 @@
           name="q"
           type="text"
           placeholder="Search..."
-          class="search-box"
+          class="search-box input"
         />
-        <select name="topic" class="dropdown-topic">
-          <option value="">Topic</option>
+        <select name="topic" class="dropdown-topic input">
+          <option value="">Any Topic</option>
           <option value="1">Technical</option>
           <option value="2">Non-Technical</option>
         </select>
