Logout button on profile page functionality added

--- a/web/profile/edit/index.html
+++ b/web/profile/edit/index.html
@@ -146,7 +146,7 @@
             <hr class="solid">
           </div>
           <div class ="wrapper-logout">
-            <button class="logout-btn">
+            <button class="logout-btn" onclick="location.href='/registration/'">
               <p>Logout</p>
             </button>
           </div>
