File structure rearranged for the profile pages so that icons and CSS can be reused. Basic implementation of the view user details page finished.

--- a/web/profile/edit/index.html
+++ b/web/profile/edit/index.html
@@ -7,7 +7,7 @@
     <meta name="color-scheme" content="light dark" />
     <meta name="theme-color" content="#1e1e1e" />
     <link rel="stylesheet" href="/base.css" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <script type="module" src="script.js"></script>
 
     <title>Profile page</title>
@@ -134,7 +134,7 @@
             <h1 class="h1">My Email</h1>
             <label for="email-box" class="label-subtext">This is your assigned company email</label>
             <label class="email-box">f.batmaz@lboro.ac.uk</label>
-            <img class="email-lock-img" src="./lock.png" alt="" />
+            <img class="email-lock-img" src="../lock.png" alt="" />
           </div>
           <div class="wrapper-invite">
             <hr class="solid">
@@ -146,7 +146,7 @@
             <hr class="solid">
           </div>
           <div class ="wrapper-logout">
-            <button class="logout-btn" onclick="location.href='/registration/'">
+            <button class="logout-btn" onclick="location.href='/login/'">
               <p>Logout</p>
             </button>
           </div>
