--- a/web/profile/index.html
+++ b/web/profile/index.html
@@ -8,6 +8,7 @@
     <meta name="theme-color" content="#1e1e1e" />
 
     <link rel="stylesheet" href="/base.css" />
+    <link rel="stylesheet" href="./style.css" />
     <script type="module" src="script.js"></script>
 
     <title>Profile</title>
@@ -79,7 +80,7 @@
       </nav>
     </aside>
     <header class="header">
-      <h1>ProfileName</h1>
+      <h1>Employee Details</h1>
       <button class="mobile-nav-toggle material-symbols-outlined">menu</button>
       <div class="account-info flex-row">
         <div class="flex-col">
@@ -96,7 +97,24 @@
       </div>
     </header>
     <main>
-      <h2>NEEDS DOING</h2>
+      <section class="card">
+        <div class="card-title-wrapper">
+          <h2 class="title-card">King Firat</h2>
+        </div>
+        <div class="card-image-wrapper">
+          <hr class="solid">
+        <!--This part below will eventually only need to show if the user is actually a manager-->
+          <h1 class="heirarchy-card">Manager</h1>
+          <img class="card-profile-picture" src="https://placekitten.com/50/50" alt="" />
+        </div>
+        <div class="wrapper-email">
+          <hr class="solid">
+          <h1 class="h1">Email</h1>
+          <label for="email-box" class="label-subtext">This is their assigned company email</label>
+          <label class="email-box">f.batmaz@lboro.ac.uk</label>
+          <img class="email-lock-img" src="./lock.png" alt="" />
+        </div>
+      </section>
       <a href="edit/">GO TO MY PROFILE EDIT PAGE</a>
     </main>
 
