search pages use the same css for search box

--- a/web/knowledge/index.html
+++ b/web/knowledge/index.html
@@ -9,6 +9,7 @@
 
     <link rel="icon" type="image/svg" href="/tools.svg" />
     <link rel="stylesheet" href="/base.css" />
+    <link rel="stylesheet" href="./search/base.css" />
     <link rel="stylesheet" href="style.css" />
 
     <!-- Because it doesn't have a script -->
@@ -105,7 +106,7 @@
     <main>
       <h4>Search</h4>
       <h3>Make-It-All</h3>
-      <form action="search/" class="search-form">
+      <form action="search/" class="search">
         <input
           name="q"
           type="text"
