Posts are now fully functional.

--- a/web/knowledge/search/index.html
+++ b/web/knowledge/search/index.html
@@ -112,7 +112,7 @@
           class="search-box"
         />
         <select name="topic" class="dropdown-topic input">
-          <option value="">Topic</option>
+          <option value="">Any Topic</option>
           <option value="1">Technical</option>
           <option value="2">Non-Technical</option>
         </select>
