fixed silly 1px edge on the background of login

--- a/web/registration/index.html
+++ b/web/registration/index.html
@@ -49,9 +49,15 @@
     <!--code for the background thingy, can use for the login as well as others that use this thing.-->
     <!-- <img src="/coolbackground.svg" alt="Make-it-all" id="waves" /> -->
 
-    <svg id="waves">
+    <svg
+      id="waves"
+      xmlns="http://www.w3.org/2000/svg"
+      version="1.1"
+      xmlns:xlink="http://www.w3.org/1999/xlink"
+      viewBox="1 1 1651 480"
+    >
       <path
-        d="M 1 1 L 1 1000 L 2000 1000 C 2000 500 400 800 1 250"
+        d="M 1 901 L 1651 901 C 2120 81 371 396 1 1"
         stroke="var(--colour-accent)"
         fill="var(--colour-accent)"
       />
