Fixed small bug with profile picture on the user details page

--- a/web/profile/edit/index.html
+++ b/web/profile/edit/index.html
@@ -96,14 +96,14 @@
     <main>
       <section class="card">
         <div class="card-title-wrapper">
-          <h2 class="title-card">King Firat</h2>
+          <h2 class="title-card">Neumann</h2>
           <h2 class="title-card">Account</h2>
         </div>
         <div class="card-image-wrapper">
           <hr class="solid">
         <!--This part below will eventually only need to show if the user is actually a manager-->
           <h1 class="heirarchy-card">Manager</h1>
-          <img id="card-profile-picture" src="https://placekitten.com/50/50" alt="" />
+          <img id="card-profile-picture" src="https://ui-avatars.com/api/?name=Neumann&background=random&size=50&format=svg" alt="" />
         </div>
         <div class="card-button-wrapper">
           <button id="card-upload-button">
