--- a/web/profile/index.html
+++ b/web/profile/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#1e1e1e" />
 
     <link rel="stylesheet" href="/base.css" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
     <script type="module" src="script.js"></script>
 
     <title>Profile</title>
@@ -99,13 +99,13 @@
     <main>
       <section class="card">
         <div class="card-title-wrapper">
-          <h2 class="title-card">King Firat</h2>
+          <h2 class="title-card">Neumann</h2>
         </div>
         <div class="card-image-wrapper">
           <hr class="solid">
         <!--This part below will eventually only need to show if the user is actually a manager-->
           <h1 class="heirarchy-card">Manager</h1>
-          <img class="card-profile-picture" src="https://placekitten.com/50/50" alt="" />
+          <img id="card-profile-picture" src="https://ui-avatars.com/api/?name=Neumann&background=random&size=50&format=svg" alt="" />
         </div>
         <div class="wrapper-email">
           <hr class="solid">
