--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -7,6 +7,8 @@
     <meta name="color-scheme" content="light dark" />
     <meta name="theme-color" content="#1e1e1e" />
 
+    <link rel="manifest" href="../manifest.json" />
+
     <link rel="icon" type="image/svg" href="/tools.svg" />
     <link rel="stylesheet" href="/base.css" />
     <link rel="stylesheet" href="./style.css" />
