--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
       window.location.href = "/dashboard/";
     </script>
 
-    <title>Trelno</title>
+    <title>Redirecting...</title>
   </head>
 
   <body></body>
