Initial work for assigning user to task on project

--- a/web/project/index.html
+++ b/web/project/index.html
@@ -214,9 +214,8 @@
           name="desc"
           placeholder="Write Task description here..."
         ></textarea>
-        <select name="project" id="options-project">
-          <option value="">Select project to add Task to</option>
-          <option value="user">Personal TODO</option>
+        <select name="user" id="assign-user">
+          <option value="">Select user to assign task to</option>
         </select>
         <div class="input-label">
           <label for="task-date">Enter Deadline for Task:</label>
