My profile (edit) page button added to the viewing profile page

--- a/web/profile/index.html
+++ b/web/profile/index.html
@@ -97,6 +97,9 @@
       </div>
     </header>
     <main>
+      <button class="my-profile-button" onclick="location.href='edit/'">
+        <p>My Profile ></p>
+      </button>
       <section class="card">
         <div class="card-title-wrapper">
           <h2 class="title-card">Neumann</h2>
@@ -115,7 +118,6 @@
           <img class="email-lock-img" src="./lock.png" alt="" />
         </div>
       </section>
-      <a href="edit/">GO TO MY PROFILE EDIT PAGE</a>
     </main>
 
 
