Password button in mobile view no longer overlaps other content (edit profile page)

--- a/web/profile/edit/index.html
+++ b/web/profile/edit/index.html
@@ -123,7 +123,7 @@
           <div class="wrapper-password">
             <hr class="solid">
             <h1 class="h1">Password</h1>
-            <label for="change-password-btn" class="label-subtext">Change your password to a more memorable one</label>
+            <label for="change-password-btn" class="label-subtext">Change your password to <br id="password-linebreak">a more memorable one</label>
             <button id="change-password-btn">
               <p>Change Password</p>
             </button>
